Development Portal (2014-11-28 shi)
==============================
Fix generator widths consistency in iframes


Development Portal (2014-11-27 shi)
==============================
Changed table links to all transactions
Edited CSS for rgba styles
Fixed transparency for generator


Development Portal (2014-11-23 shi)
==============================
Changed CSS, layout and text for generator
Reordered options for dropdown
Added arrows for dropdown multi-select
Fixed CSS & layout for index page for mobile


Development Portal (2014-11-21 shi)
==============================
Edited data source in text file
CSS fix for beige alert High Vis


Development Portal (2014-11-18 shi)
==============================
CSS fix for CRS table header
CSS fix for colours, border and headers in High Vis
CSS fix for all publishers table headers


Development Portal (2014-11-14 shi)
==============================
BETA alert across the site
Added Translations
BETA alert on the Generator page


Development Portal (2014-11-13 shi)
==============================
CSS fix for row links
New header titles for different views
Added Translations


Development Portal (2014-11-12 shi)
==============================
Added buttons to tables for year cycle


Development Portal (2014-10-30 shi)
==============================
Fixed publisher view head


Development Portal (2014-10-29 shi)
==============================
Added publishers page for comparison
New crumbs for new publisher view
Added translations
Fixed all table hover text
Deleted extra table column hover style
Added link to table row for publisher view


Development Portal (2014-10-23 shi)
==============================
Edited README
Changed main link from publishers to main page
Added publisher name to crumbs


Development Portal (2014-10-23 Kriss)
==============================
Fixed css for alerts in table
Fixed bug in map view of publisher view where locations not 
contained in a single country where getting ignored.

