@@ -56,7 +56,7 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 <div id="generator_limit_div" style="display:none;" >
 <span class="opt">LIMIT</span>
 <input type="text" id="generator_limit" class="chosen" value="1" />
-<span class="txt">Enter the maximum number of activities to show. <i>Press ENTER to update your widget below.</i></span>
+<span class="txt">Enter the maximum number of activities to show. <i>Press ENTER to update your widget below.</i> <b>Type -1 to show ALL.</b></span>
 </div>
 
 <div class="view_wrap">
@@ -245,7 +245,8 @@ a.mail:hover		{color:#74B5FF;}
 a.logo				{display:inline-block; vertical-align:bottom; width:150px;}
 a.toggle			{display:inline-block; vertical-align:middle; margin-left:20px; font-size:0.9em; color:#4CA0FF;}
 a.toggle:hover		{color:#74B5FF;}
- #generator_aid_div span.txt, #generator_limit_div span.txt	{display:inline-block; vertical-align:middle; font-size:0.9em; color:#ccc;}
+ #generator_aid_div span.txt, #generator_limit_div span.txt	{display:inline-block; vertical-align:middle; font-size:0.9em; color:#ccc; width:600px;
+margin-left:10px; line-height:1.5em;}
 
 span.overtxt		{display:none;}
 a.view:hover span.overtxt	{display:block; position:absolute; top:0; left:0; width:260px; height:119px; background-color:rgba(0,0,0,0.6); color:#fff; text-align:center; line-height:6em;}
