@@ -1,6 +1,7 @@
 Development Portal (2014-11-28 shi)
 ==============================
 Fix generator widths consistency in iframes
+Added new instructions to generator
 
 
 Development Portal (2014-11-27 shi)
